tests/baselines/reference/assignFromBooleanInterface.errors.txt
tests/cases/conformance/types/primitives/boolean/assignFromBooleanInterface.ts(3,1): error TS2322: Type 'Boolean' is not assignable to type 'boolean'.


==== tests/cases/conformance/types/primitives/boolean/assignFromBooleanInterface.ts (1 errors) ====
    var x = true;
    var a: Boolean;
    x = a;
    ~
!!! error TS2322: Type 'Boolean' is not assignable to type 'boolean'.
    a = x;